Fix user pfp endpoint to no longer be google. Request user pfp as jpeg via /api/user/{id}/pfp
